--- a/themes/WonderMod/layouts/_default/_markup/render-image.html
+++ b/themes/WonderMod/layouts/_default/_markup/render-image.html
@@ -1,1 +1,2 @@
-<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}" {{ end }} />
+<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}" {{ end }}
+{{ with .Title }} style="width: 100%; max-width: {{ . }};" {{ end }}/>
