Added log for tuesday week 7 and made a menu for products + images are now centeret

--- a/themes/WonderMod/layouts/_default/_markup/render-image.html
+++ b/themes/WonderMod/layouts/_default/_markup/render-image.html
@@ -1,2 +1,1 @@
-<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}" {{ end }}
-{{ with .Title }} style="width: 100%; max-width: {{ . }};" {{ end }}/>
+<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}" {{ end }} />
