--- a/themes/WonderMod/layouts/shortcodes/inTextImg.html
+++ b/themes/WonderMod/layouts/shortcodes/inTextImg.html
@@ -2,4 +2,4 @@
 {{- $height := (.Get "height") }}
 {{- $alt := (.Get "alt") }}
 
-<img class="in-text" height="{{ $height | default `15` }}" src="{{$Img}}" alt="{{$alt}}">
+<img class="in-text" height="{{ $height | default `15` }}" src="{{$Img}}" alt="{{$alt}}" style="display: block; margin-left: auto; margin-right: auto;">
