--- a/themes/WonderMod/assets/css/common/main.css
+++ b/themes/WonderMod/assets/css/common/main.css
@@ -64,3 +64,13 @@ div.highlight:hover .copy-code,
 pre:hover .copy-code {
     display: block;
 }
+
+
+
+td, th {
+  border: 2px solid black; /* Add a solid black border to all table cells */
+  padding: 8px; /* Add some padding to improve readability */  
+
+  width: 1%;
+  text-align: center; /* Adjust text alignment as needed */
+}
